k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-nodeport
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: go-server
