k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-ingress
spec:
  backend:
    serviceName: go-nodeport
    servicePort: 8080
